create page scroll into view

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       sizes="16x16"
       href="icons/favicon-16x16.png"
     />
+    <script
+      src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+      type="module"
+    ></script>
+
     <link rel="icon" type="image/ico" href="favicon.ico" />
 
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
