fix particles request

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link rel="icon" type="image/ico" href="src/assets/icons/favicon.ico" />
 
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
  
   </head>
   <body>
